apps/project/gke/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: project-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-backend
  template:
    metadata:
      labels:
        app: project-backend
    spec:
      volumes:
        - name: project-pvolume
          persistentVolumeClaim:
            claimName: project-claim
      containers:
        - name: project-backend
          image: PROJECT/IMAGE
          volumeMounts:
            - name: project-pvolume
              mountPath: /usr/src/app/files
          resources:
            limits:
              cpu: "150m"
              memory: "100Mi"
