apps/project/gke/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: projectbackend-svc
spec:
  type: LoadBalancer
  selector:
    app: project-backend
  ports:
  - name: http
    protocol: TCP
    port: 5000
    targetPort: 5000
