apps/project/gke/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: project-ing
  namespace: project
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: projectbackend-svc
          servicePort: 5000
